Closed
Bug 886481
Opened 13 years ago
Closed 13 years ago
Do not display total compilation time when asm.js is successfully compiled, in a --enable-more-deterministic shell
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: gkw, Assigned: Sahilc.2200)
References
Details
(Whiteboard: [mentor=gkw])
Attachments
(1 file, 4 obsolete files)
|
1.94 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #885103 +++
warning: successfully compiled asm.js code (total compilation time 0ms)
For now, bug 885103 turns all the compilation time messages to 0ms no matter what flags they are running, but Jesse prefers the message to not be there at all. See bug 885103 for the entire backstory.
| Assignee | ||
Comment 1•13 years ago
|
||
Could you please review this patch?
Comment 2•13 years ago
|
||
Thanks for looking at this bug. What I think Gary wants is to remove the message only when JS_MORE_DETERMINISTIC is defined (via the --enable-more-deterministic configure flag); in normal builds we definitely want to see this information.
| Reporter | ||
Comment 3•13 years ago
|
||
Yep, a #ifdef/#ifndef JS_MORE_DETERMINISTIC is needed.
| Assignee | ||
Comment 4•13 years ago
|
||
I think this should do the trick, as I just shifted the print line appropriately, and it will only display the compilation time when JS_MORE_DETERMINISTIC is not defined.
Attachment #784964 -
Attachment is obsolete: true
| Reporter | ||
Comment 5•13 years ago
|
||
Comment on attachment 787102 [details] [diff] [review]
work.patch
I'm not sure if out->reset still needs to be called, so pushing to Luke for advice.
Attachment #787102 -
Flags: review?(luke)
Comment 6•13 years ago
|
||
It looks like Warn gets passed a const char * (which would be NULL) and passes that to JS_ReportErrorFlagsAndNumber (which it looks like assumes non-NULL). So just change Warn() to pass (str ? str : "") instead.
| Assignee | ||
Comment 7•13 years ago
|
||
This should do it.
Updated•13 years ago
|
Attachment #787102 -
Attachment is obsolete: true
Attachment #787102 -
Flags: review?(luke)
| Assignee | ||
Comment 8•13 years ago
|
||
Here is a single patch for both of the previous patches!!
| Assignee | ||
Comment 9•13 years ago
|
||
Final Patch for the bugfix
Attachment #787122 -
Attachment is obsolete: true
Attachment #787131 -
Attachment is obsolete: true
Comment 10•13 years ago
|
||
Comment on attachment 787152 [details] [diff] [review]
Final Patch for bugfix
Great!
Attachment #787152 -
Flags: review+
Updated•13 years ago
|
Keywords: checkin-needed
| Reporter | ||
Comment 11•13 years ago
|
||
Comment 12•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in
before you can comment on or make changes to this bug.
Description
•