Bug 886481 -  Do not display total compilation time when asm.js is successfully compiled, in a --enable-more-deterministic shell; r=luke